# modular-diffusion

./: .gitignore  .pre-commit-config.yaml  .style.yapf  ACKNOWLEDGEMENT.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: astro.yml  deploy.yml
diffusion/: __init__.py  base.py  data.py  distribution.py  guidance.py  loss.py  net.py  noise.py  schedule.py  time.py
diffusion/utils/nn/: __init__.py  functional.py
docs/: astro.config.mjs  package-lock.json  package.json  tailwind.config.cjs
docs/public/: robots.txt
docs/src/components/: Article.astro  Header.astro  Index.astro  Sidebar.astro
docs/src/components/markdown/: Image.astro
docs/src/layouts/: Layout.astro
docs/src/pages/_drafts/: model.mdx
docs/src/pages/guides/: custom-modules.mdx  getting-started.mdx  image-generation.mdx  text-generation.mdx
docs/src/pages/modules/: data-transform.mdx  data-transformation.mdx  denoising-network.mdx  guidance.mdx  (+5 more)
docs/src/plugins/: remark-layout.mjs
docs/src/styles/: fonts.css  global.css
examples/: conditional-diffusion.py  discrete-diffusion.py  embedding-diffusion.py  latent-diffusion.py  text-diffusion.py  transformer-diffusion.py  unconditional-diffusion.py  unet-diffusion.py  vit-diffusion.py
examples/mnist/: requirements.txt
examples/mnist/src/: main.py
examples/utils/: __init__.py
tests/: test_base.py  test_data.py  test_distribution.py  test_guidance.py  test_loss.py  test_model.py  test_net.py  test_noise.py  test_schedule.py  test_time.py
(+5 files in other folders)
