[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modular-diffusion"
version = "0.0.1"
authors = [{ name = "João Cabral Pinto", email = "jmcabralpinto@gmail.com" }]
description = "Modular Diffusion"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cabralpinto/modular-diffusion"
"Bug Tracker" = "https://github.com/cabralpinto/modular-diffusion/issues"
